--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,7 +21,10 @@
           "js": "never",
           "ts": "never"
         }
-      ]
+      ],
+      "import/prefer-default-export": "off",
+      "class-methods-use-this": "off",
+      "no-shadow": "off"
     },
     "settings": {
       "import/resolver": {
